# mlc

./: .gitignore  .gitmodules  .pre-commit-config.yaml  NOTES.txt  README.txt  env_activate.sh  pyproject.toml  requirements-test.txt  requirements.txt
scripts/: classify.sh  data_gen.sh  feature_calc.sh  feature_select.sh  model_trainer.sh  py_deps.sh  run_mlc_module.sh  run_unittests.sh
scripts/es/: README.txt  download.sh  download_and_set_up.sh  set_up.sh
scripts/exec/: classify.sh  data_gen.sh  feature_select.sh  run_mlc_module.sh
scripts/linters/: run_all.sh  run_pylint.sh  run_shellcheck.sh
scripts/setup/: db_config.sh  postgres.sh
src/: README.txt  compression.py  data_gen.py  utils.py
src/actions/: manager.py
src/compression/: __init__.py
src/crypto/: aes.py  base.py  cipher_types.py  crypter.py  settings.py  types.py
src/data_gen/: __main__.py  data_type_base.py  data_types.py  document.py  executable.py  json_generator.py  main.py  misc.py  random_data.py
src/data_gen/misc/: __init__.py  csv_generator.py
src/features/: encrypted.py
src/hashing/: checksum.py  hash.py  hashing.py
src/mlc/: compression.py  config.yaml  dask_lightgdm_example.py  joblib_example.py  scale_start1.py  scale_start2.py  scale_start3.py  scikit_learn_gridsearchcv_parallel.py  spark_cluster_example.py  starter.py  starter2.py  starter3.py
src/mlc/_to_sort/: dask_lightgdm_example.py  joblib_example.py  scale_start2.py  spark_cluster_example.py
src/mlc/actions/: __main__.py  main.py  manager.py
src/mlc/anal/: __main__.py  binary.py  features.py  oeis.py
src/mlc/compression/: __init__.py
src/mlc/crypto/: aes.py  camellia.py  chacha20.py  cipher_types.py  crypter.py  metadata.py  settings.py
src/mlc/data_gen/: audio.py  data_type_base.py  document.py  executable.py  image.py  main.py  random_data.py  source_code.py  video.py
src/mlc/data_gen/misc/: __init__.py  csv_generator.py  json_generator.py
src/mlc/db/: base.py  manager.py  urls.py
src/mlc/db/model/: featured_data.py  generated_data.py  logs.py
src/mlc/features/: compressed.py  hashed.py
src/mlc/hashing/: checksum.py  crc.py  hashing.py
src/mlc/jobs/: job.py
src/mlc/settings/: base.py
src/mlc/startup/: pg.py
src/mlc/utils/: base_model.py  better_enum.py  config.py  constants.py  dt.py  env.py  io.py  loading.py  log_db_handler.py  rand.py  version.py
src/proc_dist/: README.txt  job.py  server.py  worker.py
src/settings/: __init__.py  test_dcdict.py
src/tests/: main.py  run.sh  test_compression.py  test_utils.py
src/utils/: io.py  loading.py
tests/: __main__.py  constants.py  main.py  run.sh  test_aes.py  test_compression.py
tests/anal/: test_binary.py  test_features.py  test_oeis.py
tests/crypto/: test_camellia.py  test_chacha20.py
tests/data_gen/: test_random_data.py
tests/data_gen/misc/: test_csv_generator.py
tests/hashing/: test_hashing.py
tests/utils/: test_loading.py
