[tool.poetry]
name = "mlc"
version = "0.1.0"
description = "ML for crypto analysis use"
authors = ["Silky <sbk7826@g.rit.edu>"]
license = "MIT"
readme = "README.txt"
packages = [{ include = "src/mlc" }]

[tool.poetry.dependencies]
python = "^3.12"
## Make sure to install Dask with distributed and LightGBM with Dask support?
## Choose roles:
## One machine = Scheduler (start with bash command: dask-scheduler)
## Others = Worker (start with bash command on each worker: dask-worker tcp://192.168.1.100:8786 --nprocs 2 --nthreads 2
## --memory-limit 4GB)
## Connect in script:
## from dask.distributed import Client
## client = Client("tcp://192.168.1.100:8786")
## dask-dashboard: http://<scheduler-ip>:8787
#dask[complete]
#dask-lightgbm
pycryptodome = "^3.23.0"
cryptography = "^45.0.3"
zstd = "^1.5.7.0"
pyyaml = "^6.0.2"
pandas = "^2.2.3"
numpy = "^2.2.6"
scikit-learn = "^1.6.1"
xgboost = "^3.0.2"
lightgbm = "^4.6.0"
shap = "^0.47.2"
lime = "^0.2.0.1"
optuna = "^4.3.0"
joblib = "^1.5.1"
boruta = "^0.4.3"
seaborn = "^0.13.2"
matplotlib = "^3.10.3"
umap-learn = "^0.5.7"
distributed = "^2025.5.1"
ray = {extras = ["default"], version = "^2.46.0"}
psycopg = {extras = ["binary"], version = "^3.2.9"}
asyncpg = "^0.30.0"
alembic = "^1.16.1"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.41"}
pydantic = "^2.11.5"
sqlmodel = "^0.0.24"
elasticsearch = "^9.0.1"
aiohttp = "^3.12.9"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.0"
black = "^25.1.0"
pre-commit = "^4.2.0"
pytest-mock = "^3.14.1"
pytest-cov = "^6.1.1"
pytest-random-order = "^1.1.1"
pytest-xdist = "^3.7.0"
tox = "^4.26.0"
codespell = "^2.4.1"
check-jsonschema = "^0.33.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
#filterwarnings = "error"
xfail_strict = true
addopts = [
    "--import-mode=importlib",
    "-rA",
    "--random-order",
    "--full-trace",
    "-v"
]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.codespell]
count = true
quiet-level = 3
